clang/test/BSC/Negative/Others/control_flow_graph/backward_goto_2/backward_goto_2.cbs
// RUN: %clang_cc1 -verify %s

// good cfg
void test1(int *_Owned p, int x) {
  if (x > 100) goto L1;

  for (int i = 0; i < 10; i++) {
    x = x + i;
  }
L1:{
    void *temp = __move_to_raw(p);
  }
}

// bad cfg
void test2(int *_Owned p, int x) { 
L1:
  x = x + 1;
  if (x < 10) goto L1;  // expected-error {{invalid code structure, jumping back to previous labels is not allowed}}
  void *temp = __move_to_raw(p);
}